# game_for-lesta

./: CMakeLists.txt  README.md  engine.cxx  engine.hxx  fragment.frag  game.cpp  shader.cxx  shader.hxx  sprite.cxx  sprite.hxx  texture.cxx  texture.hxx  vertex.vert
android-project/: gradle.properties
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/assets/res/: fragment.frag  particle.frag  particle.vert  vertex.vert
android-project/app/src/main/java/org/libsdl/app/: SDL.java  SDLActivity.java
android-project/gradle/wrapper/: gradle-wrapper.properties
eng/: button.cxx  button.hxx  engine.cxx  engine.hxx  particles.cxx  particles.hxx  shader.cxx  shader.hxx  sprite.cxx  sprite.hxx  stb_image.h  text_renderer.cxx  text_renderer.hxx  texture.cxx  texture.hxx
eng/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imstb_truetype.h
game/: ball_object.cxx  ball_object.hxx  game.cpp  game_object.cxx  game_object.hxx  wind_object.cxx  wind_object.hxx
imgui/: imconfig.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
res/: particle.vert  text.frag  text.vert
